# search-lab

./: agent.py  chat.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  search_interface.py  sync.sh  tsconfig.json  webpack.config.cjs
src/: App.tsx  ChatApp.tsx  index.css  index.html  main.tsx
src/components/: AudioRecorder.tsx  ChatMessage.tsx  ImageUpload.tsx  SearchModeToggle.tsx  SearchPane.tsx  SearchPreview.tsx  SnippetInput.tsx  StatePanel.tsx  ThemeToggle.tsx  index.ts
