[project]
name = "search-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "anthropic>=0.75.0",
    "pydantic-ai>=1.27.0",
    "pydantic-ai-slim[anthropic]>=1.27.0",
]
